editting look of calculator

--- a/styles.css
+++ b/styles.css
@@ -8,11 +8,27 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    margin-top: 50px;
+    margin-top: 30%;
 
     background-color: lightgray;
     width: 200px;
-    height: 300px;
+    height: 250px;
+
+    border-style: solid;
+    border-radius: 8px;
+}
+
+#display {
+    margin-bottom: 10px;
+}
+
+button {
+    width: 25px;
+    height: 25px;
+}
+
+#clear {
+    width: 50px;
 }
 
 input {
